set click event on standard button

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <section>
         <button class="standard">standard</button>
         <button class="rainbow">rainbow</button>
-        <button class="eraser">eraser</button>
-        <button class="clear">clear</button>
+        <button class="reset">reset</button>
     </section>
     <div class="container"></div>
     <footer>
