added footer style and readme

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <section>
         <button class="standard">standard</button>
         <button class="rainbow">rainbow</button>
-        <button class="reset">reset</button>
+        <button class="erase">erase</button>
     </section>
     <div class="container"></div>
     <footer>
-        <p>crafted by sneha ratnani</p>
+        <p>&copy; <span></span> <a href="https://github.com/sneharatnani"> sneha ratnani</a></p>
     </footer>
 </body>
 
