added sketch mode

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <section>
         <button class="standard">standard</button>
         <button class="rainbow">rainbow</button>
+        <button class="sketch">sketch</button>
         <button class="erase">erase</button>
     </section>
     <div class="container"></div>
